# low-latency-trading

./: .gitignore  CMakeLists.txt  README.md  log.txt
benchmark/: benchmark.cpp
examples/: simulator.cpp
include/: config.hpp  generator.hpp  lock_free_queue.hpp  logger.hpp  market_data_handler.hpp  order_book.hpp
include/core/: market_data_handler.hpp  order_book.hpp
include/utils/: config.hpp  generator.hpp  lock_free_queue.hpp  memory_pool.hpp
src/: benchmark.cpp  market_data_handler.cpp  order_book.cpp  simulator.cpp  test.cpp
src/core/: market_data_handler.cpp  order_book.cpp
src/misc/: benchmark_vec.cpp  order_book.cpp  order_book.hpp
tests/: test_handler.cpp  test_market_data_handler.cpp  test_ob.cpp  test_order_book.cpp
