cmake_minimum_required(VERSION 3.20)
project(trading VERSION 1.0.0 LANGUAGES CXX)

# Use C++20
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Compiler-specific options
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    # High optimization level with LTO
    set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -flto -march=native")
    # Extra warnings and strict compilation
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
elseif(MSVC)
    # High optimization level
    set(CMAKE_CXX_FLAGS_RELEASE "/O2 /DNDEBUG /GL")
    # Warning level 4
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
endif()

# Include directories
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

# Library sources (ignore misc/)
file(GLOB_RECURSE LIB_SOURCES
    "src/*.cpp"
    "src/**/*.cpp"
)
# Remove any file in misc/
list(FILTER LIB_SOURCES EXCLUDE REGEX ".*/misc/.*")

# Create the library
add_library(trading_lib STATIC ${LIB_SOURCES})

# Executables
add_executable(benchmark src/benchmark.cpp)
add_executable(simulator src/simulator.cpp)
add_executable(test src/test.cpp)

# Link library
target_link_libraries(benchmark PRIVATE trading_lib)
target_link_libraries(simulator PRIVATE trading_lib)
target_link_libraries(test PRIVATE trading_lib)
